Change program name to tossfs

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -17,25 +17,25 @@
 # along with this program; if not, write to the Free Software
 # Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
 ######################################################################
-bin_PROGRAMS=ossfs
+bin_PROGRAMS=tossfs
 
 AM_CPPFLAGS = $(DEPS_CFLAGS)
 if USE_GNUTLS_NETTLE
   AM_CPPFLAGS += -DUSE_GNUTLS_NETTLE
 endif
 
-ossfs_SOURCES = s3fs.cpp s3fs.h curl.cpp curl.h cache.cpp cache.h string_util.cpp string_util.h s3fs_util.cpp s3fs_util.h fdcache.cpp fdcache.h common_auth.cpp s3fs_auth.h common.h
+tossfs_SOURCES = s3fs.cpp s3fs.h curl.cpp curl.h cache.cpp cache.h string_util.cpp string_util.h s3fs_util.cpp s3fs_util.h fdcache.cpp fdcache.h common_auth.cpp s3fs_auth.h common.h
 if USE_SSL_OPENSSL
-  ossfs_SOURCES += openssl_auth.cpp
+  tossfs_SOURCES += openssl_auth.cpp
 endif
 if USE_SSL_GNUTLS
-  ossfs_SOURCES += gnutls_auth.cpp
+  tossfs_SOURCES += gnutls_auth.cpp
 endif
 if USE_SSL_NSS
-  ossfs_SOURCES += nss_auth.cpp
+  tossfs_SOURCES += nss_auth.cpp
 endif
 
-ossfs_LDADD = $(DEPS_LIBS)
+tossfs_LDADD = $(DEPS_LIBS)
 
 noinst_PROGRAMS = test_string_util
 
